Fix grid layout to stretch on Chrome

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,8 @@
+html,
 body {
-  min-height: 100vh;
   padding: 0;
   margin: 0;
+  height: 100vh;
 }
 
 #container {
